# star-echo

./: .gitignore  CMakeLists.txt  DNSE_3D.cpp  DNSE_3D.h  DNSE_3D.hpp  DNSE_AuUp.hpp  DNSE_AuUp_params.cpp  DNSE_AuUp_params.h  DNSE_BE.cpp  DNSE_BE.h  DNSE_BE.hpp  DNSE_BE_params.cpp  DNSE_BE_params.h  DNSE_CH.cpp  DNSE_CH.h  DNSE_CH.hpp  DNSE_CH_params.cpp  DNSE_CH_params.h  DNSE_EQ.cpp  DNSE_EQ.h  DNSE_EQ.hpp  DbReduce.cpp  DbReduce.h  DbReduce.hpp  FilterFabric.cpp  FilterFabric.h  FilterFabric.hpp  Makefile  README.md  armspecific.h  filter.h  install.win  log.hpp  mediaProcess.cpp  mediaProcess.h  q2cathedral.cpp  q2effect.cpp  star_echo.cpp  star_echo.h  threaded.h  (+1 more)
StarEcho/Setup/: Product.wxs  Setup.wixproj  vars.wxi
StarEcho/apo/: Q2APO.h  Q2APO.idl  Q2APO.vcxproj  Q2APO.vcxproj.filters  resource.h  resource.rc
StarEcho/common/: common.vcxproj  registry.h  scopedResource.cpp  settings.cpp  settings.h  stringUtils.cpp
StarEcho/control/: MainWindow.cpp  MainWindow.h  NotifyIcon.cpp  NotifyIcon.h  Resource.h  control.cpp  control.h  control.rc  control.vcxproj  framework.h  icon.cpp  mmDeviceInfo.h  winservice.cpp
Ultraverse/: Ultraverse.sln  env.props
Ultraverse/Setup/: Product.wxs  Setup.wixproj  eula.rtf  vars.wxi
Ultraverse/apo/: Q2APO.cpp  Q2APO.h  Q2APO.vcxproj  Q2APO.vcxproj.filters  Q2APODll.rgs  Q2APOMFX.rgs  Q2APO_h.h  Q2APO_i.c  Q2APO_p.c  dllMain.cpp  dlldata.c  log.hpp  stdafx.h
Ultraverse/common/: common.vcxproj.filters  error.h  pch.h  registry.cpp  registry.h  scopedResource.h  settings.cpp  settings.h  stringUtils.cpp  stringUtils.h
Ultraverse/control/: MainWindow.cpp  MainWindow.h  NotifyIcon.cpp  NotifyIcon.h  Resource.h  control.cpp  control.h  control.rc  control.vcxproj  control.vcxproj.filters  framework.h  icon.cpp  icon.h  mmDeviceInfo.cpp  mmDeviceInfo.h  mmDevices.cpp  mmDevices.h  winservice.cpp  winservice.h
reference/: DNSE_CH.java  DNSE_CH.js  volume-matcher.py  volumeDiff.py
web-server/: app.js  package-lock.json  package.json
web-server/views/: error.ejs  home.ejs
